--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="sv">
-  <head>
-    <meta charset="UTF-8">
-    <title>Tillgängliga kontraster</title>
-  </head>
-  <body>
-    <p style="background-color: #798086; color: #000;">Text</p>
-    <p style="background-color: #b79fad; color: #000;">Text</p>
-    <p style="background-color: #556f7a; color: #000;">Text</p>
-    <p style="background-color: #d4Afcd; color: #000;">Text</p>
-    <p style="background-color: #fe5f55; color: #000;">Text</p>
-    <p style="background-color: #32a8b0; color: #000;">Text</p>
-    <p style="background-color: #e6926f; color: #000;">Text</p>
-    <p style="background-color: #2e6171; color: #000;">Text</p>
-    <p style="background-color: #c3d8b5; color: #000;">Text</p>
-    <p style="background-color: #6e96ad; color: #000;">Text</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <nav></nav>
+  
+  <main>
+    <article>a</article>
+    <section>b</section>
+  </main>
+</body>
 </html>
