blockelement passed test

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <nav></nav>
   
   <main>
-    <article>a</article>
-    <section>b</section>
+    <figure></figure>
   </main>
+  <footer></footer>
 </body>
 </html>
