--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-  <nav></nav>
-  
+  <nav><button></button>
+    <a href=""></a></nav>
+    <b></b>
   <main>
+    <video></video>
     <figure></figure>
   </main>
-  <footer></footer>
+  <footer><img src="abc.jpg" alt="abc"></footer>
 </body>
 </html>
