block inline span passed

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
   <title>Document</title>
 </head>
 <body>
-  <nav><button></button>
-    <a href=""></a></nav>
-    <b></b>
+  <nav>
+    </nav>
+    
   <main>
+
+    <span>
+      <a href=""></a><b></b><button></button><img src="abc.jpg" alt="abc">
+    </span>
+
     <video></video>
     <figure></figure>
   </main>
-  <footer><img src="abc.jpg" alt="abc"></footer>
+  <footer></footer>
 </body>
 </html>
