one div with html terminologi passed

--- a/index.html
+++ b/index.html
@@ -7,18 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  <nav>
-    </nav>
-    
-  <main>
-
+  <div>
     <span>
-      <a href=""></a><b></b><button></button><img src="abc.jpg" alt="abc">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
     </span>
-
-    <video></video>
-    <figure></figure>
-  </main>
-  <footer></footer>
+  </div>
+  <h1><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </em></h1>
 </body>
 </html>
