--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <div>
-    <span>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-    </span>
-  </div>
-  <h1><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </em></h1>
-</body>
+<html lang="sv">
+  <head>
+    <meta charset="utf-8">
+    <title>Väljarpussel (VG)</title>
+    <link href="index.css" rel="stylesheet">
+  </head>
+  <body>
+    <ol>
+      <li class="a">Ett</li>
+      <li class="b" id="b">Två</li>
+      <li class="c">Tre</li>
+      <li class="a b c">Fyra</li>
+    </ol>
+  </body>
 </html>
