--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html lang="sv">
-  <head>
-    <meta charset="utf-8">
-    <title>Väljarpussel (VG)</title>
-    <link href="index.css" rel="stylesheet">
-  </head>
-  <body>
-    <ol>
-      <li class="a">Ett</li>
-      <li class="b" id="b">Två</li>
-      <li class="c">Tre</li>
-      <li class="a b c">Fyra</li>
-    </ol>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <h1>Curriculum Vitae</h1>
+  <h2>Kontaktinformation</h2>
+  <h2>Karriärssummering</h2>
+  <h3>Karriärssummering</h3>
+  <p>Välkänd Entrepenör</p>
+  <h2>Utbildning</h2>
+  <h2>Utbildning</h2>
+  <h3>Erfarenhet</h3>
+  <p>IT-Högskolan</p>
+  <h2>Färdigheter</h2>
+  
+</body>
 </html>
