--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Curriculum Vitae</h1>
-  <h2>Kontaktinformation</h2>
-  <h2>Karriärssummering</h2>
-  <h3>Karriärssummering</h3>
-  <p>Välkänd Entrepenör</p>
-  <h2>Utbildning</h2>
-  <h2>Utbildning</h2>
-  <h3>Erfarenhet</h3>
-  <p>IT-Högskolan</p>
-  <h2>Färdigheter</h2>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hello World!</title>
+  </head>
+  <body>
+
+    <video
+      controls
+      width="720"
+      src="big_buck_bunny_480p_stereo.ogg">
+
+    </video>
+  </body>
 </html>
