add required and maxlength value

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <form action="https://www.example.com/" method="GET">
     <input name="user-name" placeholder="User name">
-    <textarea name="message" placeholder="Message" cols="40" rows="4">
+    <textarea name="message" maxlength="15" required placeholder="Message" cols="40" rows="4">
     </textarea>
     <button><u>Send</u></button>
     </form>
