forms multiple choice 1

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Flerradstextfält och placeholders</title>
+    <title>Kryssrutor</title>
     <meta content="initial-scale=1, width=device-width" name="viewport">
   </head>
   <body>
-    <form action="https://www.example.com/" method="GET">
-    <input name="user-name" placeholder="User name">
-    <textarea name="message" maxlength="15" required placeholder="Message" cols="40" rows="4">
-    </textarea>
-    <button><u>Send</u></button>
-    </form>
+    <label>
+      <input checked name="val1" type="checkbox" value="val1"> Val 1
+    </label>
+    <label>
+      <input name="val2" type="checkbox" value="val2"> Val 2
+    </label>
+
+
   </body>
 </html>
