forms multiple choice 2

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="sv">
   <head>
     <meta charset="utf-8">
-    <title>Kryssrutor</title>
+    <title>Radioknappar</title>
     <meta content="initial-scale=1, width=device-width" name="viewport">
   </head>
   <body>
@@ -12,7 +12,15 @@
     <label>
       <input name="val2" type="checkbox" value="val2"> Val 2
     </label>
-
-
+    
+    <label>
+      <input name="radio" type="radio" value="radio1"> Radio 1
+    </label>
+    <label>
+      <input name="radio" type="radio" value="radio2"> Radio 2
+    </label>
+    <label>
+      <input name="radio" type="radio" value="radio3"> Radio 3
+    </label>
   </body>
 </html>
