form multiple choice 3

--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
     <label>
       <input name="radio" type="radio" value="radio3"> Radio 3
     </label>
+
+    <label for="dropdown">Dropdown</label>
+    <select id="dropdown" name="dropdown">
+      <option value="drop1">Drop 1</option>
+      <option value="drop2">Drop 2</option>
+      <option value="drop3">Drop 3</option>
+    </select>
   </body>
 </html>
