first commit validated head

--- a/code-along/index.html
+++ b/code-along/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
+<!-- Language change to SV -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!-- Viewport -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- SEO, sökordsoptimering -->
+    <meta name="description" content="Här finner ni ert drömhus!">
+    <title>Huspunkten</title>
+    <link rel="stylesheet" href="stylesheet.css">
     <script src="app.js" defer></script>
+    <!-- validated above -->
 </head>
 <body>
     
