--- a/code-along/index.html
+++ b/code-along/index.html
@@ -14,6 +14,27 @@
     <!-- validated above -->
 </head>
 <body>
+    <!-- navbar -->
+    <nav class="navbar">
+
+        <div class="brand-title">HUSPUNKTEN</div>
+        
+        <!-- links, hamubrger menu to make responsive -->
+        <!-- mobile menu -->
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+
+        <!-- navbar in desktop -->
+        <div class="navbar-links">
+            <ul>
+                <li><a href="#">Hem</a></li>
+                <li><a href="contact-form">Kontant</a></li>
+            </ul>
+        </div>
+        <!-- validated above -->
+    </nav>
     
 </body>
 </html>
