add css description and root

--- a/code-along/index.html
+++ b/code-along/index.html
@@ -14,7 +14,7 @@
     <!-- validated above -->
 </head>
 <body>
-    <!-- navbar -->
+    <!-- navbar (nested) -->
     <nav class="navbar">
 
         <div class="brand-title">HUSPUNKTEN</div>
