--- a/code-along/index.html
+++ b/code-along/index.html
@@ -24,6 +24,7 @@
         <a href="#" class="toggle-button">
             <span class="bar"></span>
             <span class="bar"></span>
+            <span class="bar"></span>
         </a>
 
         <!-- navbar in desktop -->
