--- a/code-along/index.html
+++ b/code-along/index.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
-<!-- Language change to SV -->
+<!--Language, change to SV-->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <!-- Viewport -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- SEO, sökordsoptimering -->
-    <meta name="description" content="Här finner ni ert drömhus!">
-    <title>Huspunkten</title>
-    <link rel="stylesheet" href="stylesheet.css">
+  <head>
+    <meta charset="UTF-8" />
+    <!--Viewport-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--SEO, Sökmotoroptimering-->
+    <meta name="description" content="Här finner ni ert drömhus" />
+    <!--Link to stylesheet-->
+    <link rel="stylesheet" href="stylesheet.css" />
+    <!--Adding JS link file in the head to make it run at start-->
     <script src="app.js" defer></script>
-    <!-- validated above -->
-</head>
-<body>
-    <!-- navbar (nested) -->
+    <!--Title shows in the  tab in the browser window-->
+    <title>Huspunkten</title>
+    <!--Validated Above 2022-09-08 09:56-->
+  </head>
+  <body>
+    <!--Navbar, (Nested)-->
     <nav class="navbar">
-
-        <div class="brand-title">HUSPUNKTEN</div>
-        
-        <!-- links, hamubrger menu to make responsive -->
-        <!-- mobile menu -->
-        <a href="#" class="toggle-button">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </a>
-
-        <!-- navbar in desktop -->
-        <div class="navbar-links">
-            <ul>
-                <li><a href="#">Hem</a></li>
-                <li><a href="contact-form">Kontant</a></li>
-            </ul>
-        </div>
-        <!-- validated above -->
+      <!--Logotype (Use img element)/Just text, just write :)-->
+      <div class="brand-title">HUSPUNKTEN</div>
+      <!--Links, hamburgerbar to make the site responsive-->
+      <!--Mobile menu-->
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <!--Navbar in desktop mode-->
+      <div class="navbar-links">
+        <ul>
+          <li><a href="#">Hem</a></li>
+          <li><a href="contact-form">Kontakt</a></li>
+        </ul>
+      </div>
     </nav>
-
-    
-</body>
+    <!--Validated Above 2022-09-08 10:14-->
+  </body>
 </html>
