--- a/code-along/index.html
+++ b/code-along/index.html
@@ -37,5 +37,20 @@
       </div>
     </nav>
     <!--Validated Above 2022-09-08 10:14-->
+
+    <!-- Hero section -->
+    <section class="hero-image">
+        <div class="hero-text">
+            <h1>DIN DRÖM</h1>
+            <h1>VÅRT UPPDRAG</h1>
+            <H2 id="usp-text">
+                Vilket är ert drömhus? <br>
+                En ny bostad i villakvarteret, ett fjällhus, mitt i skidbacken, ett sommarhus i skärgården, eller kanske ett attefallshus för uthyrning?
+            </H2>
+
+            <button class="btn" onclick="window.location='https://www.iths.se'">Läs mer</button>
+        </div>
+    </section>
+
   </body>
 </html>
