copy and paste source code form Richard

--- a/code-along/index.html
+++ b/code-along/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Language, change to SV-->
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <!--Viewport-->
@@ -38,19 +38,25 @@
     </nav>
     <!--Validated Above 2022-09-08 10:14-->
 
-    <!-- Hero section -->
+    <!--Hero Section-->
     <section class="hero-image">
         <div class="hero-text">
-            <h1>DIN DRÖM</h1>
-            <h1>VÅRT UPPDRAG</h1>
-            <H2 id="usp-text">
-                Vilket är ert drömhus? <br>
-                En ny bostad i villakvarteret, ett fjällhus, mitt i skidbacken, ett sommarhus i skärgården, eller kanske ett attefallshus för uthyrning?
-            </H2>
+            <h1>DIN DRÖM.</h1>
+            <h1>VÅRT UPPDRAG.</h1>
+            <h2 id="usp-text">
+                Vilket är ert drömhus?<br>
+                En ny bostad i villakvarteret, ett fjällhus mitt i skidbacken, ett 
+                sommarhus i skärgården eller kanske ett Attefallshus för uthyrning?
+            </h2>
 
-            <button class="btn" onclick="window.location='https://www.iths.se'">Läs mer</button>
+            <!--wrong way to create a button!! 
+            <button><a href="https:iths.se">Läs mer här</button>-->
+            <!--This is the correct way from 2021-->
+            <button class="btn" onclick="window.location.href='#'">Läs mer</button>
+
         </div>
     </section>
+
 
   </body>
 </html>
