--- a/code-along/index.html
+++ b/code-along/index.html
@@ -57,6 +57,21 @@
         </div>
     </section>
 
+    <!-- Testimonial section, Grid area -->
+    <section class="testimonial-grid-container">
+        <div id="comment1"></div>
+        <div id="comment2">
+            <h2>En husleveratör med stark framtidsvision</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita eligendi ducimus, distinctio dolorem itaque debitis <br><br>perferendis obcaecati perspiciatis neque voluptas quisquam repudiandae iure nesciunt consequuntur sed iste rerum laboriosam fugiat asperiores <br><br>voluptatum odit. Nam cupiditate cumque placeat, labore mollitia reprehenderit, id exercitationem tempore ducimus natus, enim doloribus facilis nesciunt odit.</p>
+        </div>
+        <div id="comment3">
+            <h2>En husleveratör med stark framtidsvision</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita eligendi ducimus, distinctio dolorem itaque debitis <br><br>perferendis obcaecati perspiciatis neque voluptas quisquam repudiandae iure nesciunt consequuntur sed iste rerum laboriosam fugiat asperiores <br><br>voluptatum odit. Nam cupiditate cumque placeat, labore mollitia reprehenderit, id exercitationem tempore ducimus natus, enim doloribus facilis nesciunt odit.</p>
+        </div>
+        <div id="comment4"></div>
 
+        <!-- Validated above, OK -->
+
+    </section>
   </body>
 </html>
