add button for comment 3 and format css

--- a/code-along/index.html
+++ b/code-along/index.html
@@ -67,6 +67,8 @@
         <div id="comment3">
             <h2>En husleveratör med stark framtidsvision</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita eligendi ducimus, distinctio dolorem itaque debitis <br><br>perferendis obcaecati perspiciatis neque voluptas quisquam repudiandae iure nesciunt consequuntur sed iste rerum laboriosam fugiat asperiores <br><br>voluptatum odit. Nam cupiditate cumque placeat, labore mollitia reprehenderit, id exercitationem tempore ducimus natus, enim doloribus facilis nesciunt odit.</p>
+            <button class="btn2" onclick="window.location.href='#'">Bygg online</button>
+            
         </div>
         <div id="comment4"></div>
 
