bug house images outside slideshow

--- a/code-along/index.html
+++ b/code-along/index.html
@@ -75,5 +75,25 @@
         <!-- Validated above, OK -->
 
     </section>
+
+    <section class="slideshow">
+        <div class="slideshow-container">
+            <div class="myslides fade">
+                <img src="/code-along/img/hus1.jpg" alt="hus1">
+                <h1 class="myslides-header">Fritidshus 40-60kvm</h1>
+                <p class="myslides-text"> Pris från: <strong>299.000kr inkl moms.</strong></p>
+            </div>
+            <div class="myslides fade">
+                <img src="/code-along/img/hus2.jpeg" alt="hus2">
+                <h1 class="myslides-header">Fritidshus 60-90kvm</h1>
+                <p class="myslides-text"> Pris från: <strong>499.000kr inkl moms.</strong></p>
+            </div>
+            <div class="myslides fade">
+                <img src="/code-along/img/hus3.jpg" alt="hus3">
+                <h1 class="myslides-header">Fritidshus 90-120kvm</h1>
+                <p class="myslides-text"> Pris från: <strong>499.000kr inkl moms.</strong></p>
+            </div>
+        </div>
+    </section>
   </body>
 </html>
