--- a/code-along/index.html
+++ b/code-along/index.html
@@ -40,60 +40,67 @@
 
     <!--Hero Section-->
     <section class="hero-image">
-        <div class="hero-text">
-            <h1>DIN DRÖM.</h1>
-            <h1>VÅRT UPPDRAG.</h1>
-            <h2 id="usp-text">
-                Vilket är ert drömhus?<br>
-                En ny bostad i villakvarteret, ett fjällhus mitt i skidbacken, ett 
-                sommarhus i skärgården eller kanske ett Attefallshus för uthyrning?
-            </h2>
+      <div class="hero-text">
+        <h1>DIN DRÖM.</h1>
+        <h1>VÅRT UPPDRAG.</h1>
+        <h2 id="usp-text">
+          Vilket är ert drömhus?<br />
+          En ny bostad i villakvarteret, ett fjällhus mitt i skidbacken, ett
+          sommarhus i skärgården eller kanske ett Attefallshus för uthyrning?
+        </h2>
 
-            <!--wrong way to create a button!! 
+        <!--wrong way to create a button!! 
             <button><a href="https:iths.se">Läs mer här</button>-->
-            <!--This is the correct way from 2021-->
-            <button class="btn" onclick="window.location.href='#'">Läs mer</button>
-
-        </div>
+        <!--This is the correct way from 2021-->
+        <button class="btn" onclick="window.location.href='#'">Läs mer</button>
+      </div>
     </section>
-
-    <!-- Testimonial section, Grid area -->
+    <!--Testimonial Section, Grid Area-->
     <section class="testimonial-grid-container">
         <div id="comment1"></div>
         <div id="comment2">
-            <h2>En husleveratör med stark framtidsvision</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita eligendi ducimus, distinctio dolorem itaque debitis <br><br>perferendis obcaecati perspiciatis neque voluptas quisquam repudiandae iure nesciunt consequuntur sed iste rerum laboriosam fugiat asperiores <br><br>voluptatum odit. Nam cupiditate cumque placeat, labore mollitia reprehenderit, id exercitationem tempore ducimus natus, enim doloribus facilis nesciunt odit.</p>
+            <h2>En husleverantör med stark framtidsvision!</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                Culpa sunt vero ipsum ullam sed adipisci soluta expedita est,<br>
+                delectus, similique quos doloremque obcaecati pariatur autem id <br>
+                tenetur ab totam, dignissimos assumenda temporibus incidunt officia?<br>
+                 Voluptatem fugiat cupiditate minima ad quidem modi voluptates.<br>
+                 Accusantium recusandae officia at est molestias, aperiam dolore?</p>
         </div>
         <div id="comment3">
-            <h2>En husleveratör med stark framtidsvision</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita eligendi ducimus, distinctio dolorem itaque debitis <br><br>perferendis obcaecati perspiciatis neque voluptas quisquam repudiandae iure nesciunt consequuntur sed iste rerum laboriosam fugiat asperiores <br><br>voluptatum odit. Nam cupiditate cumque placeat, labore mollitia reprehenderit, id exercitationem tempore ducimus natus, enim doloribus facilis nesciunt odit.</p>
-            <button class="btn2" onclick="window.location.href='#'">Bygg online</button>
-            
+            <h2>En husleverantör med stark framtidsvision!</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+                Culpa sunt vero ipsum ullam sed adipisci soluta expedita est,<br>
+                delectus, similique quos doloremque obcaecati pariatur autem id <br>
+                tenetur ab totam, dig
+                nissimos assumenda temporibus incidunt officia?<br>
+                 Voluptatem fugiat cupiditate minima ad quidem modi voluptates.<br>
+                 Accusantium recusandae officia at est molestias, aperiam dolore?</p>
+                 <button class="btn2" onclick="window.location.href='#'">Bygg Online</button>
         </div>
         <div id="comment4"></div>
-
-        <!-- Validated above, OK -->
-
     </section>
-
+    <!--Slideshow-->
     <section class="slideshow">
         <div class="slideshow-container">
-            <div class="myslides fade">
+            <div class="mySlides fade">
                 <img src="/code-along/img/hus1.jpg" alt="hus1">
                 <h1 class="myslides-header">Fritidshus 40-60kvm</h1>
-                <p class="myslides-text"> Pris från: <strong>299.000kr inkl moms.</strong></p>
+                <p class="myslides-text">Pris från: <strong>299.000:- inkl moms</strong></p>
             </div>
-            <div class="myslides fade">
-                <img src="/code-along/img/hus2.jpeg" alt="hus2">
+            <div class="mySlides fade">
+                <img src="/code-along/img/hus2.jpg" alt="hus2">
                 <h1 class="myslides-header">Fritidshus 60-90kvm</h1>
-                <p class="myslides-text"> Pris från: <strong>499.000kr inkl moms.</strong></p>
+                <p class="myslides-text">Pris från: <strong>499.000:- inkl moms</strong></p>
             </div>
-            <div class="myslides fade">
+            <div class="mySlides fade">
                 <img src="/code-along/img/hus3.jpg" alt="hus3">
-                <h1 class="myslides-header">Fritidshus 90-120kvm</h1>
-                <p class="myslides-text"> Pris från: <strong>499.000kr inkl moms.</strong></p>
+                <h1 class="myslides-header">Fritidshus 90-110kvm</h1>
+                <p class="myslides-text">Pris från: <strong>699.000:- inkl moms</strong></p>
             </div>
+
         </div>
+
     </section>
   </body>
 </html>
