--- a/index.html
+++ b/index.html
@@ -8,12 +8,7 @@
 </head>
 <body>
 
-    <header>
-        <h1>
-            Välkommen till...
-        </h1>
-    </header>
-
+    
     <nav>
         <ul>
             <li><a href="#">Hem</a></li>
@@ -21,6 +16,12 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    
+    <header>
+        <h1>
+            Välkommen till...
+        </h1>
+    </header>
 
     <main>
         <article>
@@ -30,7 +31,7 @@
 
             <section>
                 <h3>
-                    Den här produkten...
+                    Fördelar med den här produkten...
                 </h3>
 
                 <p>Gillar du att...</p>
