fixed hero image and centered content

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-    <header>
-      <img
-        src="beans.png"
-        alt="rostade bönor i påse"/>
+    <header class="hero-image">
+    </header>
+
       <nav>
         <ul>
           <li><a href="#">Hem</a></li>
@@ -20,7 +19,7 @@
         </ul>
       </nav>
       <h1>Välkommen till kaffe rosteriet!</h1>
-    </header>
+
 
     <main>
       <article>
