--- a/index.html
+++ b/index.html
@@ -8,47 +8,48 @@
     <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
-    <header class="hero-image">
+    <header class="hero-image" id="top">
     </header>
 
-      <nav>
+      <nav class="navbar-links">
         <ul>
-          <li><a href="#">Hem</a></li>
-          <li><a href="#">Vår produkt</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#top">Hem</a></li>
+          <li><a href="#benefits">Fördelar med kaffe</a></li>
+          <li><a href="#sleep">Om sömn</a></li>
         </ul>
       </nav>
       <h1>Välkommen till kaffe rosteriet!</h1>
 
 
+
     <main>
-      <article>
-        <img src="beans-unroasted.png" alt="färska bönor" />
-        <h2>En öväntad sak om kaffebönan,</h2>
-        <p>är att den är ett frö och ser ut som färgglada bär!</p>
+      <article id="benefits">
+        <img src="beans-unroasted.png" alt="färska bönor" width="100%" height="100%"/>
+        <h2>En oväntad sak om kaffebönan,</h2>
+        <p>är att kaffebönan är ett frö och ser ut som färgglada bär!</p>
 
         <section>
           <h3>Fördelar med den att dricka några koppar kaffe på förmiddagen:</h3>
           <ul>
-            <li>Text #</li>
-            <li>Text #</li>
-            <li>Text #</li>
+            <li>Du blir piggare av kaffe genom att koffeinet blockerar trötthetssignaler</li>
+            <li>Några kaffekoppar om dagen minskar risken för alzheimers.</li>
+            <li>Kafferasten blir ett sätt att komma ifrån jobb och vara social med kollegor eller bara ta en paus själv.</li>
           </ul>
 
         </section>
       </article>
 
-      <aside>
-          <h4>Visste du attKaffe har en halveringstid på 8 timmar?</h4>
+      <aside id="sleep">
+          <h4>Visste du att kaffe har en halveringstid på 3-7 timmar?</h4>
           <p>
-              Vilket betyder att det tar 8 timmar innan hälften av koffeinets effekt är borta, vilket betyder att det är bra för nattsömnen att begränsa sitt kaffe intag till kl 12-14 för att få ostörd sömn.
+              Vilket betyder att det tar 3-7 timmar innan hälften av koffeinets effekt är borta, vilket betyder att det är bra för nattsömnen att begränsa sitt kaffe intag till kl 12-14 för att få ostörd sömn.
           </p>
 
       </aside>
     </main>
 
     <footer>
-      <p>Copyrigth...</p>
+      <p>Copyright &copy; 2022</p>
     </footer>
   </body>
 </html>
