--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       </nav>
       <h1>Välkommen till kaffe rosteriet!</h1>
 
-
+    <!-- Validated above, OK! -->
 
     <main>
       <article id="benefits">
-        <img src="beans-unroasted.png" alt="färska bönor" width="100%" height="100%"/>
+        <img src="beans-unroasted.png" alt="färska bönor"/>
         <h2>En oväntad sak om kaffebönan,</h2>
         <p>är att kaffebönan är ett frö och ser ut som färgglada bär!</p>
 
@@ -39,6 +39,8 @@
         </section>
       </article>
 
+      <!-- Validated above, OK! -->
+      
       <aside id="sleep">
           <h4>Visste du att kaffe har en halveringstid på 3-7 timmar?</h4>
           <p>
@@ -47,6 +49,8 @@
 
       </aside>
     </main>
+    
+      <!-- Validated above, OK! -->
 
     <footer>
       <p>Copyright &copy; 2022</p>
