--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -6,14 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avancera Native JavaScript</title>
     <link rel="stylesheet" href="stylesheet.css">
-
+    <script src="index.js" defer></script>
 </head>
 <body>
     <h1>Avancera Native JavaScript</h1>
-
-    <script>
-        alert("Hello World!");
-    </script>
     
 </body>
 </html>
