add class.js file

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -7,6 +7,7 @@
     <title>Avancera Native JavaScript</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="index.js" defer></script>
+    <script src="class.js"></script>
 </head>
 <body>
     <h1>Avancera Native JavaScript</h1>
