--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -7,11 +7,11 @@
     <title>Avancera Native JavaScript</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="index.js" defer></script>
-    <script src="programming-qoutes.js" defer></script>
+    <script src="programming-quotes.js" defer></script>
 </head>
 <body>
     <h1>Avancera Native JavaScript</h1>
-    <div id="qoutes"></div>
+    <div id="quotes"></div>
     
 </body>
 </html>
