--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -12,6 +12,12 @@
 <body>
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
+    <h1 id="heading">Hej!</h1>
+    <p class="introduction">Välkommen!</p>
+    <p class="introduction">Välkommen!</p>
+    <p>...</p>
+
+    <div id="some-element">Hej <strong>Alice</strong>!</div>
     
 </body>
 </html>
