DOM nodes, two older methods

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
     <h1>Avancera Native JavaScript</h1>
-    <div id="quotes"></div>    
+    <div id="quotes"></div>
+    <section id="players">
+        <h1>Spelare</h1>
+        <ol>
+          <li>Alice</li>
+          <li>Bob</li>
+          <li>Cesar</li>
+        </ol>    
 </body>
 </html>
