DOM nodes, children (VG)

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -18,6 +18,10 @@
           <li>Alice</li>
           <li>Bob</li>
           <li>Cesar</li>
-        </ol>    
+        </ol>
+    </section>
+    <script>
+        const ol = document.querySelector('ol')
+      </script>    
 </body>
 </html>
