--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -13,7 +13,7 @@
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
     <section id="players">
-        <h1>Spelare</h1>
+        <h1>Players</h1>
         <ol>
           <li>Alice</li>
           <li>Bob</li>
