--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
+    <input id="button" type="button" value="Klicka här">
     <section id="players">
         <h1>Players</h1>
         <ol>
