JS Events and addEventListener, increase a value

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -12,7 +12,8 @@
 <body>
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
-    <input id="button" type="button" value="Klicka här">
+    <div id="value"></div>
+    <input id="increase" type="button" value="Öka">
     <section id="players">
         <h1>Players</h1>
         <ol>
