JS Events and addEventListener, increase or decrease one value: Part 2 (VG)

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -13,6 +13,7 @@
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
     <div id="value"></div>
+    <input id="decrease" type="button" value="Minska">
     <input id="increase" type="button" value="Öka">
     <section id="players">
         <h1>Players</h1>
