JS Global addEventListener, a clickable button part: 2

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avancera Native JavaScript</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="index.js" defer></script> 
+    <script src="index.js"></script> 
     <script src="programming-quotes.js" defer></script>
 </head>
 <body>
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
     <div id="value"></div>
-    <input id="decrease" type="button" value="Minska">
-    <input id="increase" type="button" value="Öka">
+    <input id="button" type="button" value="Klicka här">
     <section id="players">
         <h1>Players</h1>
         <ol>
