--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avancera Native JavaScript</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="index.js"></script> 
+    <script src="index.js" defer></script> 
     <script src="programming-quotes.js" defer></script>
 </head>
 <body>
