JS Global addEventListener, increase or decrease one value: Part 3 (VG)

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -13,14 +13,7 @@
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
     <div id="value"></div>
-    <input id="button" type="button" value="Klicka här">
-    <section id="players">
-        <h1>Players</h1>
-        <ol>
-          <li>Alice</li>
-          <li>Bob</li>
-          <li>Cesar</li>
-        </ol>
-    </section>   
+    <input id="decrease" type="button" value="Minska">
+    <input id="increase" type="button" value="Öka"> 
 </body>
 </html>
