--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -12,8 +12,7 @@
 <body>
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
-    <div id="value"></div>
-    <input id="decrease" type="button" value="Minska">
-    <input id="increase" type="button" value="Öka"> 
+    <label for="name">Namn</label>
+    <input id="name" placeholder="Namn">
 </body>
 </html>
