Get input values, a text field, a paragraph and a button

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -14,5 +14,7 @@
     <div id="quotes"></div>
     <label for="name">Namn</label>
     <input id="name" placeholder="Namn">
+    <input id="send" type="button" value="Skicka">
+    <p id="greeting"></p>
 </body>
 </html>
