Get input values, an invalid value

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -16,5 +16,11 @@
     <input id="name" placeholder="Namn">
     <input id="send" type="button" value="Skicka">
     <p id="greeting"></p>
+    <div id="errors" style="color: red; display: none;">
+      <p>Fel:</p>
+      <ul>
+        <li>Vänligen fyll i ett namn</li>
+      </ul>
+    </div>
 </body>
 </html>
