JS Forms, submit (VG)

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -12,20 +12,22 @@
 <body>
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
-    <label for="name">Namn</label>
-    <input id="name" placeholder="Namn">
-    <label>
-      <input id="consent" type="checkbox">
-      Jag samtycker
-    </label>
-    <input id="send" type="button" value="Skicka">
-    <p id="greeting"></p>
-    <div id="errors" style="color: red; display: none;">
-      <p>Fel:</p>
-      <ul>
-        <li id="name-error">Vänligen fyll i ett namn</li>
-        <li id="consent-error">Samtycke måste lämnas</li>
-      </ul>
-    </div>
+    <form id="form">
+      <label for="name">Namn</label>
+      <input id="name" placeholder="Namn">
+      <label>
+        <input id="consent" type="checkbox">
+        Jag samtycker
+      </label>
+      <input id="send" type="submit" value="Skicka">
+      <p id="greeting"></p>
+      <div id="errors" style="color: red; display: none;">
+        <p>Fel:</p>
+        <ul>
+          <li id="name-error">Vänligen fyll i ett namn</li>
+          <li id="consent-error">Samtycke måste lämnas</li>
+        </ul>
+      </div>
+    </form>
 </body>
 </html>
