JSU TypeScript walkthrough, start

--- a/nativeJS/index.html
+++ b/nativeJS/index.html
@@ -7,27 +7,11 @@
     <title>Avancera Native JavaScript</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="index.js" defer></script> 
+    <script src="typescript.js" defer></script> 
     <script src="programming-quotes.js" defer></script>
 </head>
 <body>
     <h1>Avancera Native JavaScript</h1>
     <div id="quotes"></div>
-    <form id="form">
-      <label for="name">Namn</label>
-      <input id="name" placeholder="Namn">
-      <label>
-        <input id="consent" type="checkbox">
-        Jag samtycker
-      </label>
-      <input id="send" type="submit" value="Skicka">
-      <p id="greeting"></p>
-      <div id="errors" style="color: red; display: none;">
-        <p>Fel:</p>
-        <ul>
-          <li id="name-error">Vänligen fyll i ett namn</li>
-          <li id="consent-error">Samtycke måste lämnas</li>
-        </ul>
-      </div>
-    </form>
 </body>
 </html>
