--- a/JavaScriptMedRamverk/index.html
+++ b/JavaScriptMedRamverk/index.html
@@ -5,8 +5,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>JavaScript med Ramverk</title>
+	<script src="https://unpkg.com/vue@3"></script>
 </head>
 <body>
-	
+	<div id="app">
+		<p>{{ 2 + 2 }}</p>
+	</div>
+	<script src="index.js"></script>
 </body>
 </html>
