--- a/JavaScriptMedRamverk/index.html
+++ b/JavaScriptMedRamverk/index.html
@@ -4,12 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>JavaScript med Ramverk</title>
+	<title>En “variabel”</title>
 	<script src="https://unpkg.com/vue@3"></script>
 </head>
 <body>
 	<div id="app">
-		<p>{{ 2 + 2 }}</p>
+		<p>Hej {{ name }}!</p>
 	</div>
 	<script src="index.js"></script>
 </body>
