--- a/JavaScriptMedRamverk/index.html
+++ b/JavaScriptMedRamverk/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 	<div id="app">
-		<p>Hej {{ name }}!</p>
+		<p>Personer, {{ name }}.</p>
+		<p>Ålder, {{ object }}.</p>
 	</div>
 	<script src="index.js"></script>
 </body>
