--- a/JavaScriptMedRamverk/index.html
+++ b/JavaScriptMedRamverk/index.html
@@ -4,13 +4,12 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>En “variabel”</title>
+	<title>HTML-interpolering (VG)</title>
 	<script src="https://unpkg.com/vue@3"></script>
 </head>
 <body>
 	<div id="app">
-		<p>Personer, {{ name }}.</p>
-		<p>Ålder, {{ object }}.</p>
+		<div v-html="markup"></div>
 	</div>
 	<script src="index.js"></script>
 </body>
